--- a/CiftlikPazarMobile/CiftlikPazarApp/package.json
+++ b/CiftlikPazarMobile/CiftlikPazarApp/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.4",
+    "base-64": "^1.0.0",
     "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
+    "@types/mime": "^3.0.4",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
